crates/cribo/tests/snapshots/stickytape_compatibility_tests__bundled_script_using_module_in_package.snap
---
source: crates/cribo/tests/stickytape_compatibility_tests.rs
description: Bundled content for script_using_module_in_package
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

# ─ Module: greetings.greeting ─
import types
greetings = types.ModuleType('greetings')
greetings.greeting = types.ModuleType('greetings.greeting')
exec('message = "Hello"', greetings.greeting.__dict__)

# ─ Entry Module: hello ─
print(greetings.greeting.message)
