crates/cribo/tests/snapshots/stickytape_compatibility_tests__bundled_script_with_single_local_from_import.snap
---
source: crates/cribo/tests/stickytape_compatibility_tests.rs
description: Bundled content for script_with_single_local_from_import
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

# ─ Module: greeting ─
message = "Hello"
message = message

# ─ Entry Module: hello ─
print(message)
