crates/cribo/tests/snapshots/stickytape_compatibility_tests__bundled_script_with_single_local_import.snap
---
source: crates/cribo/tests/stickytape_compatibility_tests.rs
description: Bundled content for script_with_single_local_import
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

# ─ Module: greeting ─
import types
greeting = types.ModuleType('greeting')
exec('message = "Hello"', greeting.__dict__)

# ─ Entry Module: hello ─
print(greeting.message)
