crates/cribo/tests/snapshots/stickytape_compatibility_tests__bundled_script_with_special_shebang.snap
---
source: crates/cribo/tests/stickytape_compatibility_tests.rs
description: Bundled content with shebang for script_with_special_shebang
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

# Preserved imports
import sys

# ─ Entry Module: hello ─
import sys
print(sys.flags.ignore_environment)
