crates/cribo/tests/snapshots/stickytape_compatibility_tests__bundled_single_file.snap
---
source: crates/cribo/tests/stickytape_compatibility_tests.rs
description: Bundled content for single_file
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

# ─ Entry Module: hello ─
print("Hello")
