crates/cribo/tests/snapshots/stickytape_compatibility_tests__bundled_single_file_using_stdlib.snap
---
source: crates/cribo/tests/stickytape_compatibility_tests.rs
description: Bundled content for single_file_using_stdlib
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

# Preserved imports
import hashlib

# ─ Entry Module: hello ─
import hashlib
print(hashlib.sha1(b"Hello").hexdigest())
