crates/cribo/tests/snapshots/stickytape_compatibility_tests__comprehensive_bundling_results.snap
---
source: crates/cribo/tests/stickytape_compatibility_tests.rs
description: Comprehensive bundling test results across multiple scenarios
expression: summary
---
Bundling Test Results Summary:
✓ single_file (Single file without dependencies)
  Lines: 6, Size: 152 bytes
  Execution: Success: Hello

✓ script_with_single_local_import (Script with local module import)
  Lines: 11, Size: 287 bytes
  Execution: Success: Hello

✓ script_using_module_in_package (Script importing from package)
  Lines: 12, Size: 379 bytes
  Execution: Success: Hello

✓ script_with_single_local_from_import (Script with from-import syntax)
  Lines: 9, Size: 198 bytes
  Execution: Success: Hello

✓ imports_in_imported_modules (Nested module imports)
  Lines: 11, Size: 236 bytes
  Execution: Success: Hello

Successful: 5, Failed: 0, Total scenarios: 5
